# mfmacrawl

./: .gitignore  .travis.yml  Dockerfile  Pipfile  README.md  buildmirror.py  pyproject.toml  requirements.txt  scrapinghub.yml  scrapy.cfg  setup.py
mfma/: archiveorg.py  builder.py  disk_cache.py  items.py  pipelines.py  settings.py
mfma/pipelines/: __init__.py  aws_s3.py  internet_archive.py
mfma/spiders/: mfma_spider.py
tests/mfma/spiders/: test_mfma_spider.py
tests/mfma/spiders/test_mfma_spider/: FormTableContentTestCase_page_source.html  ScrapeMenuTestCase_page_source.html
