[tool.poetry]
name = "mfmacrawl"
version = "0.1.0"
description = "Scrape mfma.treasury.gov.za"
authors = ["JD Bothma <jd@openup.org.za>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
scrapy = "==2.6.2"
pytest = "*"
beautifulsoup4 = "*"
scrapy-querycleaner = "==1.0.0"
pyyaml = "*"
boto3 = "==1.17.73"
boto = "^2.49.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
